--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,9 +1,10 @@
 body {
     margin: 0;
     padding: 0;
-    /* background: url('https://images.unsplash.com/photo-1513002749550-c59d786b8e6c?ixlib=rb-1.2.1&w=1000&q=80'); */
-    /* background-size: cover; */
-    /* background-repeat: no-repeat; */
+}
+
+p {
+    font-size: 16px;
 }
 
 .left {
@@ -53,3 +54,30 @@ body {
 .img-xl {
     
 }
+
+.ptb-20 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+
+  .last.txt {
+    margin: 10px 5px 0;
+    text-shadow: 0px 1px #000;
+  }
+
+  .last.danger {
+    color: #c21808;
+  }
+
+  .last.success {
+    color: forestgreen;
+  }
+
+  .error-message {
+    color: maroon;
+    background: pink;
+    padding: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
