--- a/src/components/App.css
+++ b/src/components/App.css
@@ -81,3 +81,10 @@ p {
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
   }
+
+
+@media only screen and (min-width: 600px) {
+    p {
+        font-size: 18px;
+    }
+}
